--- a/src/datasets/reddit/crawler/reddit_api.ini
+++ b/src/datasets/reddit/crawler/reddit_api.ini
@@ -1,4 +1,4 @@
 [api]
-client_id = # You need to create a Reddit account and register an application to the the log in information
+client_id = # You need to create a Reddit account and register an application to get the log-in information
 client_secret =
 user_agent =
